--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,4 @@ MONGO_URI=mongodb+srv://mern-stack:RyC3jYNwBxgzwFiR@cluster0.vmgxy32.mongodb.net
 
 
 
-JWT_SECRET=mongodb+srv://mern-stack:RyC3jYNwBxgzwFiR@cl
+JWT_SECRET=Please-make-sure-that-the-environment-variables@RyC3jYNwBxgzwFiR
